# carla_auditory

./: CHANGELOG.md  CMakeLists.txt  Configure.py  Jenkinsfile  README.md
CMake/: Dependencies.cmake  LinuxToolchain.cmake  Options.cmake  Util.cmake
Docs/: adv_opendrive.md  build_faq.md  build_linux.md  build_linux_ue5.md  build_update.md  build_windows.md  python_api.md  ref_cpp.md  ref_sensors.md  start_quickstart.md  tuto_G_retrieve_data.md  tuto_M_generate_pedestrian_navigation.md
Examples/: CMakeLists.txt
LibCarla/: CMakeLists.txt
LibCarla/extensions/Ros2Native/: CMakeLists.txt
LibCarla/source/carla/: Version.h.in
LibCarla/source/carla/client/: Actor.cpp  Actor.h  DebugHelper.cpp  DebugHelper.h  FileTransfer.h  ServerSideSensor.cpp  ServerSideSensor.h  Vehicle.cpp  Vehicle.h  World.cpp  World.h
LibCarla/source/carla/client/detail/: Client.cpp  Client.h  Simulator.cpp  Simulator.h
LibCarla/source/carla/pytorch/: pytorch.cpp  pytorch.h
LibCarla/source/carla/road/: Map.cpp  MeshFactory.cpp  MeshFactory.h
LibCarla/source/carla/ros2/publishers/: CarlaIMUPublisher.cpp  CarlaLineInvasionPublisher.cpp
LibCarla/source/carla/rpc/: ActorAttributeType.h  Command.h  DebugShape.h
LibCarla/source/carla/sensor/: SensorRegistry.h
PythonAPI/carla/agents/navigation/: basic_agent.py
PythonAPI/carla/source/carla/: __init__.py  libcarla.pyi
PythonAPI/carla/source/libcarla/: Control.cpp
PythonAPI/carla/src/: Actor.cpp  Blueprint.cpp  Commands.cpp  Control.cpp  Sensor.cpp  SensorData.cpp  World.cpp
PythonAPI/docs/: client.yml  geom.yml
PythonAPI/examples/: ambulance-spawn.py  automatic_control_siren.py  local_planner.py  pull_over_agent.py  real_time_test.py  requirements-audio.txt  svmSiren  svmSirenMEANS  temp-test.py
PythonAPI/examples/rss/: manual_control_rss.py  rss_sensor.py  rss_visualization.py
Ros2Native/: CMakeLists.txt
TEMP-CONTENT/: followButton.uasset  follow_pawn.uasset
TEMP-CONTENT/Ambulance/: BP_Ambulance.uasset  BP_Ambulance_FLW.uasset  BP_Ambulance_FRW.uasset  BP_Ambulance_RLW.uasset  BP_Ambulance_RRW.uasset
TEMP-CONTENT/sounds/: ambulance.uasset  ambulance_Cue.uasset  carHorn.uasset  fireTruck_Cue.uasset  police_Cue.uasset  videoplayback.uasset
Unreal/: CMakeLists.txt
Unreal/CarlaUE4/: CarlaUE4.uproject
Unreal/CarlaUE4/Config/: DefaultEngine.ini
Unreal/CarlaUE4/Plugins/Carla/Source/Carla/: Carla.Build.cs.in
Unreal/CarlaUE4/Plugins/Carla/Source/Carla/Game/: CarlaGameModeBase.cpp  CarlaGameModeBase.h  TaggedComponent.cpp  Tagger.cpp
Unreal/CarlaUE4/Plugins/Carla/Source/Carla/Sensor/: RayCastSemanticLidar.cpp  Sensor.cpp
Unreal/CarlaUE4/Plugins/Carla/Source/Carla/Util/: LineTraceTesterActor.cpp  LineTraceTesterActor.h  SensorSpawnerActor.cpp
Unreal/CarlaUE4/Plugins/CarlaTools/Source/CarlaTools/: CarlaTools.Build.cs
Unreal/CarlaUnreal/Config/: DefaultEngine.ini
Unreal/CarlaUnreal/Plugins/: .gitignore
Unreal/CarlaUnreal/Plugins/Carla/Source/Carla/: Carla.Build.cs  Carla.cpp  RTFlags.def
Unreal/CarlaUnreal/Plugins/CarlaTools/Content/Python/: generate_tile.py
Util/: CreateDebian.sh
(+44 files in other folders)
